--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,12 +20,16 @@
     <string name="quiz2">Quesrion 02</string>
     <string name="quiz3">Quesrion 03</string>
     <string name="quizOv">Quiz Over!</string>
-    <string name="scoreQ">Score 03/05</string>
+    <string name="scoreQ">Score</string>
     <string name="retry">Retry</string>
     <string name="back_men">Back to Menu</string>
     <string name="wlcm">Welcome</string>
     <string name="reg_as">I want to register As</string>
 
+    <string name="open">open</string>
+    <string name="close">close</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
 
 
     <string name="ppl_say">What people say about us!</string>
@@ -40,8 +44,6 @@
     <string name="int_rev">Insert Review</string>
 
 
-
-
     <string name="newsfeed_top">Tell students, What new updates are...</string>
     <string name="news1">News 1</string>
     <string name="news2">News 2</string>
@@ -54,5 +56,7 @@
     <string name="news_des">Description</string>
     <string name="news_added_btn">Add News</string>
     <string name="news_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
